--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,14 @@ bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 cryptography
 click
-langchain
-langchain-openai
-langchain-community
-langchain-pinecone
-pinecone
+langchain==0.3.17
+langchain-core==0.3.28
+langchain-openai==0.2.14
+langchain-community==0.3.17
+langchain-pinecone==0.2.0
+pinecone-client==5.0.1
 python-socketio
 boto3
 langdetect
 stripe
+openai==1.58.1
