--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,11 @@ bcrypt==4.1.2
 python-jose[cryptography]==3.3.0
 cryptography
 click
-langchain==0.3.17
-langchain-core==0.3.28
-langchain-openai==0.2.14
-langchain-community==0.3.17
-langchain-pinecone==0.2.0
+langchain>=0.3.18
+langchain-core>=0.3.33
+langchain-openai>=0.2.14
+langchain-community>=0.3.17
+langchain-pinecone>=0.2.0
 pinecone-client==5.0.1
 python-socketio
 boto3
