--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,151 @@
-fastapi>=0.110.0
-uvicorn==0.27.1
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pydantic>=2.0.0
-requests
-jinja2
-email-validator
-pymongo
-redis==5.0.1
-PyJWT==2.10.1
-beautifulsoup4
-psutil
-passlib[bcrypt]==1.7.4
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.10.0
+asgiref==3.8.1
+attrs==25.3.0
 bcrypt==4.1.2
-python-jose[cryptography]==3.3.0
-cryptography
-click
-langchain
-langchain-openai
-langchain-community
-langchain-pinecone
-pinecone
-python-socketio
-boto3
-langdetect
-stripe
+beautifulsoup4==4.13.4
+bidict==0.23.1
+boto3==1.40.8
+botocore==1.40.8
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.6
+dataclasses-json==0.6.7
+distro==1.9.0
+Django==5.1.1
+django-cors-headers==4.7.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.116.1
+frozenlist==1.7.0
+git-filter-repo==2.47.0
+google-api-core==2.25.1
+google-api-python-client==2.178.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+graphene==3.4.3
+graphene-django==3.2.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.1
+hubspot-api-client==12.0.0
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+jiter==0.10.0
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-core==0.3.74
+langchain-openai==0.3.30
+langchain-pinecone==0.2.11
+langchain-tests==0.3.20
+langchain-text-splitters==0.3.9
+langdetect==1.0.9
+langsmith==0.4.14
+mailchimp3==3.0.21
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+motor==3.7.1
+multidict==6.6.4
+mypy_extensions==1.1.0
+numpy==2.3.2
+oauthlib==3.3.1
+openai==1.99.9
+orjson==3.11.1
+packaging==24.2
+passlib==1.7.4
+pinecone==7.3.0
+pinecone-plugin-assistant==1.7.0
+pinecone-plugin-interface==0.0.7
+pluggy==1.6.0
+promise==2.3
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.31.1
+psutil==7.0.0
+psycopg2-binary==2.9.10
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycalendar==2.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyJWT==2.10.1
+pymongo==4.14.0
+pyparsing==3.2.3
+pypdf==6.0.0
+pytest==8.4.1
+pytest-asyncio==0.26.0
+pytest-benchmark==5.1.0
+pytest-codspeed==4.0.0
+pytest-recording==0.13.4
+pytest-socket==0.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.12.2
+python-jose==3.3.0
+python-multipart==0.0.9
+python-slugify==8.0.4
+python-socketio==5.11.0
+pytz==2024.1
+PyYAML==6.0.2
+redis==5.0.1
+regex==2025.7.34
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.1.0
+rsa==4.9.1
+s3transfer==0.13.1
+simple-websocket==1.1.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.43
+sqlparse==0.5.1
+starlette==0.47.2
+stripe==7.11.0
+syrupy==4.9.1
+tenacity==9.1.2
+text-unidecode==1.3
+tiktoken==0.11.0
+tqdm==4.67.1
+types-python-dateutil==2.9.0.20250822
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2024.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.27.1
+vcrpy==7.0.0
+websocket-client==1.9.0
+websockets==15.0.1
+wrapt==1.17.3
+wsproto==1.2.0
+yarl==1.20.1
+zstandard==0.23.0
