--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
+aiohttp==3.9.5
 aiohttp-retry==2.9.1
 aiosignal==1.4.0
 annotated-types==0.7.0
@@ -52,15 +52,16 @@ jiter==0.10.0
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
-langchain-openai==0.3.30
-langchain-pinecone==0.2.11
-langchain-tests==0.3.20
-langchain-text-splitters==0.3.9
+langchain==1.2.0
+langchain-core==1.2.4
+langchain-community==0.4.1
+langchain-openai==1.1.6
+langchain-pinecone==0.2.13
+langchain-text-splitters==1.1.0
+langgraph>=1.0.2,<1.1.0
+openai==1.109.1
 langdetect==1.0.9
-langsmith==0.4.14
+langsmith==0.3.45
 mailchimp3==3.0.21
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
@@ -69,9 +70,8 @@ mdurl==0.1.2
 motor==3.7.1
 multidict==6.6.4
 mypy_extensions==1.1.0
-numpy==2.3.2
+numpy<2
 oauthlib==3.3.1
-openai==1.99.9
 orjson==3.11.1
 packaging==24.2
 passlib==1.7.4
@@ -115,7 +115,7 @@ pytz==2024.1
 PyYAML==6.0.2
 redis==5.0.1
 regex==2025.7.34
-requests==2.32.4
+requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==14.1.0
@@ -130,7 +130,7 @@ sqlparse==0.5.1
 starlette==0.47.2
 stripe==7.11.0
 syrupy==4.9.1
-tenacity==9.1.2
+tenacity<9.0.0
 text-unidecode==1.3
 tiktoken==0.11.0
 tqdm==4.67.1
